--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
     <p> Hard working person that is always looking for the next oppurtunity to learn and get better.
       </p>
-      
+      <img src="unnamed-5.jpg" width="200" hight="250">
      <div class="exp header">
        <h2> Experience </h2>
       </div>
